Tanta roba. in generale, salvataggio dei dati nel DB. Registrazione pagina 2

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,7 @@
                 android:value="" />
         </activity>
         <activity android:name=".Registrazione_Pag2"></activity>
+        <activity android:name=".Pagina3.PaginaScheda_Pag3"></activity>
     </application>
 
 </manifest>
