--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -26,8 +27,8 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".Registrazione_Pag2"></activity>
-        <activity android:name=".Pagina3.PaginaScheda_Pag3"></activity>
+        <activity android:name=".Registrazione_Pag2" />
+        <activity android:name=".Pagina3.PaginaScheda_Pag3" />
     </application>
 
 </manifest>
