--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -29,6 +30,8 @@
         </activity>
         <activity android:name=".Registrazione_Pag2" />
         <activity android:name=".Pagina3.PaginaScheda_Pag3" />
+        <service android:name=".Pagina3.TimerService" />
+
     </application>
 
 </manifest>
